auto-test/tests/chapter_18/invalid_types/extra_credit/other_features/switch_on_struct.c

struct s {
    int i;
};

int main(void) {
    struct s x = {1};
    switch (x) {
        case 1:
            return 0;
        default:
            return 1;
    }
}